--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "php": "^7.2 | ^8.0"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.12",
-        "phpunit/phpunit": "^8.5 || ^9.6 || ^10.5 || ^11.4"
+        "phpunit/phpunit": "^8.5 || ^9.6 || ^10.5 || ^11.5 || ^12.3"
     },
     "autoload": {
         "psr-4": {
